# Python-Virtual-Assistant

./: README.md  pyproject.toml
data/: data.csv
src/: assistant.py  intent_classifier.py
src/commands/: check_time.py  greeting.py  joke.py  wiki_search.py
